--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "types": "./dist/src/index.d.ts",
   "scripts": {
+    "sandbox": "parcel ./sandbox.html",
     "start": "npm run clean && tsc -w",
     "build": "npm run clean && microbundle build --format modern,esm,cjs,umd --compress --tsconfig tsconfig.json",
     "build:tsc": "tsc --sourceMap",
@@ -39,6 +40,7 @@
     "web3": "^1.7.4"
   },
   "devDependencies": {
+    "parcel": "^2.7.0",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.1",
@@ -52,6 +54,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "microbundle": "0.14.2",
     "mocha": "^10.0.0",
+    "os-browserify": "^0.3.0",
     "prettier": "^2.7.1",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
